--- a/interface/docker-compose.yaml
+++ b/interface/docker-compose.yaml
@@ -2,9 +2,9 @@ version: "3"
 services:
   web:
     build: .
-    container_name: "web-treinototal-ranks"
+    container_name: "web-treinototal-senai"
     ports:
-      - "3405:80"
+      - "80:80"
     stdin_open: true
     tty: true
     # volumes:
